# mlops-zoomcamp

./: README.md  homework_1.ipynb  mlflow.db  poetry path.txt  pyproject.toml  usefull_commands.txt
hw1/: homework_1.ipynb
hw2/: hpo.py  mlflow.db  register_model.py  train.py
hw2/artifacts/3/3b625fbf7ab14f01ac25f42bbc64bf8d/artifacts/model/: MLmodel
hw2/artifacts/3/5d6d8791d791421a94bce935470f2e56/artifacts/model/: MLmodel
hw2/artifacts/3/6994631edc7d4a639c335458c42f4ec1/artifacts/model/: MLmodel
hw2/artifacts/3/86ab9ec4a726427ea0681034080a18c3/artifacts/model/: MLmodel
hw2/artifacts/3/c053734444ef4ece8aca7b25cbc393e2/artifacts/model/: MLmodel
hw2/mlruns/1/04363318565b4c22be67cd47c0dff84d/artifacts/model/: MLmodel
hw2/mlruns/1/1094a607ec834fdb80764e3dcf9735a2/artifacts/model/: MLmodel
hw2/mlruns/1/1c9a59d82de04f18bddbfba5628134a9/artifacts/model/: MLmodel
hw2/mlruns/1/542b4d0e093149809d6816cc2767fad8/artifacts/model/: MLmodel  requirements.txt
hw2/mlruns/1/63917b1bd12c4997b16984fce0dff6cd/artifacts/model/: MLmodel  conda.yaml
hw2/mlruns/1/9b060112bfdf40edb83137cac0a1a6df/artifacts/model/: MLmodel  conda.yaml
hw2/mlruns/1/9e9048f20ed944568aba2ab9f1a1bbbd/artifacts/model/: MLmodel
hw2/mlruns/1/a1ab3e45c0944325acd8c4c67e50a8a9/artifacts/model/: MLmodel
hw3/: answers.txt  homework.py  homework_deployment.py  mlflow.db
hw3/mlruns/1/1bfe6bf4ea3044c2a9e64482b3cc32d3/artifacts/models_mlflow/: MLmodel  conda.yaml  model.pkl
hw4/: Dockerfile  starter.ipynb  starter.py  starter_with_args.py
hw6/: batch.py
(+1 files in other folders)
