[tool.poetry]
name = "mlops-test-repo"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
tensorflow = "^2.8.0"
click = "^8.1.3"
numpy = "^1.22.3"
dvc = {extras = ["all"], version = "^2.10.2"}
scipy = "^1.8.0"
pywin32 = "^304"
mlflow = "1.26.0"
python-dotenv = "^0.20.0"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
scikit-learn = "1.0.2"
seaborn = "^0.11.2"
hyperopt = "^0.2.7"
xgboost = "^1.6.1"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
