[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["pan.sf"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.26.1"
jupyter = "^1.0.0"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
hyperopt = "^0.2.7"
xgboost = "^1.6.1"
fastparquet = "^0.8.1"
boto3 = "^1.24.2"
prefect = "2.0b5"
pysqlite3 = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
